--- a/style.css
+++ b/style.css
@@ -59,11 +59,6 @@ div.tudo{
     display: flex;
 }
 
-h1.top{
-    margin-left: 125px;
-    margin-top: 48px;
-}
-
 .arte .principal{
     flex: 1;
     height: 500px;
@@ -73,6 +68,10 @@ h1.top{
     width: 532px;
 }
 
+h1.h1-top{
+    margin-left: 125px;
+    margin-top: 48px;
+}
 .principal{
     width: 865px;
     height: 658px;
