--- a/style.css
+++ b/style.css
@@ -15,11 +15,14 @@ body{
     margin: 0px;
     padding: 0px;
     overflow-y: hidden;
+    box-sizing: border-box;
 }
 
 img.diagroma{
     width: 54px;
     height: 50px;
+    margin-left: 5px;
+    margin-top: 5px;
 }
 
 img.worldimg{
@@ -30,7 +33,7 @@ img.worldimg{
 div.world{
     display: flex;
     justify-content: space-around;
-    height: 300px;
+    height: 255px;
     width: 300px;
     margin: 0px;
     padding: 0px;
@@ -42,18 +45,15 @@ div.world{
 div.astro{
     display: flex;
     justify-content: flex-start;
-    align-items: flex-end;
-    height: 168px;
-    width: 111px;
-    margin: 0px;
-    padding: 0px;
+    width: 165px;
+    height: 208px;
     margin-top: 60px;
 }
 
 img.astroimg{
-    width: 111px;
-    height: 168px;
-    margin-left: 332px;
+    width: 165px;
+    height: 208px;
+    margin-left: 298px;
 }
 
 div.tudo{
@@ -78,54 +78,71 @@ h1.h1-top{
     color: black;
     background-color: white;
     float: right;
+    border-radius: 15px;
 }
 
 h1.create{
+    color: rgba(0, 0, 0, 0.5);
     font-weight: bolder;
     margin-top: 50px;
     margin-left: 122px;
+    letter-spacing: 10px;
 }
 
 .div-login{
     display: flex;
 }
 
-.div-login-google .div-login-facebook{
+.div-google .div-facebook{
     flex: 1;
 }
 
-.div-login-google{
+.div-google{
+    display: flex;
     width: 210px;
+    height: 43px;
     margin-left: 122px;
     margin-top: 50px;
     border: 1px solid rgba(0, 0, 0, 0.158);
     border-radius: 10px;
     cursor: pointer;
+    font-size: 0.9em;
+    align-items: center;
+    justify-content: center;
 }
 
 img.iconGoogle{
-    width: 36px;
-    height: 36px;
+    width: 25px;
+    height: 25px;
+    margin-right: 8px;
 }
 
-.div-login-facebook{
-    width: 231px;
-    margin-left: 16px;
+.div-facebook{
+    display: flex;
+    width: 210px;
+    height: 43px;
+    margin-left: 50px;
     margin-top: 50px;
     border: 1px solid rgba(0, 0, 0, 0.158);
     border-radius: 10px;
     cursor: pointer;
+    font-size: 0.9em;
+    align-items: center;
+    justify-content: center;
 }
 
 img.iconFacebook{
-    width: 36px;
-    height: 36px;
+    width: 25px;
+    height: 25px;
+    margin-right: 8px;
 }
 
 p.OR{
-    margin-left: 340px;
+    color: rgba(0, 0, 0, 0.507);
+    margin-left: 324px;
     margin-top: 78px;
-    margin-bottom: 50px;
+    margin-bottom: 26px;
+    letter-spacing: 8px;
 }
 
 form{ 
@@ -138,6 +155,10 @@ input{
     border: none;
     border-bottom: 1px solid #00000038;
     margin: 13px;
+}
+
+input:focus{
+    outline: none;
 }
 
 input[type="submit"]{
@@ -159,4 +180,5 @@ a{
 p.login{
     margin-top: 10px;
     margin-left: 120px;
+    color: rgba(0, 0, 0, 0.514);
 }
