--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    font-family: 'Inter', sans-serif;
+    font-family: rean, sans-serif;
     background: black url(img/pexels-alex-andrews-816608.jpg) no-repeat;
     background-size: contain;
     color: white;
